[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.10.0"
serde = {version="1.0.193", features=["derive"]}
thiserror = "1.0.50"
rustyline = "12.0.0"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
nom = "7.1.3"
